Fixed issue: alignment issue for date time widgets in live filter

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1984,9 +1984,6 @@ If the height and width are not specified the video takes the height of the post
       padding-right: 4px;
     }
   }
-  .app-date, .app-datetime, .app-timeinput {
-    width: 100%;
-  }
 }
 /********************************************************************************
 ************************* Login form classes ******************************
